--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-    <title>THRIFTY NYC</title>
-</head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <!-- <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <title>THRIFTY NYC</title> -->
+    </head>
 
-<header>
+    <body>
+        <header>
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Thrifty nyc</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-</header>
-<body>
+        <!-- <nav class="navbar navbar-dark navbar-expand-sm">
+            <a href="/" class="navbar-brand">THRIFTY NYC</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="active nav-item me-2"><a class="nav-link" href="/">Home</a></li>
+                <li class=" nav-item me-2"><a class="nav-link" href="/Tips">Tips</a></li>
+                <li class="nav-item me-2"><a class="nav-link" href="/Competition">Contact Us</a></li> -->
+        </header>
+
+
     <div class="section">
 
     </div>
@@ -30,17 +61,17 @@
 
     </div>
     
-<footer>
+    <footer>
 
-</footer>
+    </footer>
 
 
-<!------------------------/ Bootstrap and Font Awesome scripts-->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<link rel="stylesheet"> <script src="https://kit.fontawesome.com/54a37ef757.js" crossorigin="anonymous"></script>
-</body>
+    <!-- Bootstrap and Font Awesome scripts-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet"> <script src="https://kit.fontawesome.com/54a37ef757.js" crossorigin="anonymous"></script>
+    </body>
 
-</html>
+    </html>
