--- a/index.html
+++ b/index.html
@@ -23,44 +23,29 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Tips</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Photos</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
 
-
-
-          <!-- <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                 </button>
-    
-                 <div class="collapse navbar-collapse" id="navbarNav">
-                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Tips</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Photos</a>
-                        </li> 
-                     </ul>
-                  </div>
+           <!-- Hero Image and Cover Text-->
+           <section id="hero-section">
+            <div id="hero-image">
+              <div id="hero-text">
+                <h1>Unlocking the City, <br>
+                     One Deal at a Time!</h1>
+              </div>
             </div>
-          </nav>
-        </header> -->
+          </section>
 
-
-    <div class="section">
+<!-- 
+                </div>
+              </div> -->
 
     </div>
     <div class="section">
