Add icons to the navbar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Tips</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-comment"></i><span>Tips</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Photos</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-camera"></i><span>Gallery</span></a>
                   </li>
                 </ul>
               </div>
@@ -34,7 +34,7 @@
           </nav>
 
            <!-- Hero Image and Cover Text-->
-           <section id="hero-section">
+           <section class="hero-section">
             <div id="hero-image">
               <div id="hero-text">
                 <h1>Unlocking the City, <br>
