--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
+                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i>Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-comment"></i><span>Tips</span></a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-comment"></i>Tips</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-camera"></i><span>Gallery</span></a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-camera"></i>Gallery</a>
                   </li>
                 </ul>
               </div>
@@ -47,8 +47,16 @@
                 </div>
               </div> -->
 
-    </div>
-    <div class="section">
+    <!-- </div> -->
+            <!-- Intro-->
+            <section class="intro">
+              <h2 class="text-uppercase sub-heading">about thrifty nyc</h2>
+                <div class="grid-container aerial-view">
+                  <div class="col-6 col-sm-12">
+                    <img src="assets/images/aerial-view.jpg" alt="An aerial view of New York">
+                  </div>
+                  
+                </div>
 
     </div>
     <div class="section">
