--- a/index.html
+++ b/index.html
@@ -44,21 +44,40 @@
           </section>
 
 <!-- 
-                </div>
+                <!-- </div>
               </div> -->
 
-    <!-- </div> -->
+    </div> 
             <!-- Intro-->
-            <section class="intro">
-              <h2 class="text-uppercase sub-heading">about thrifty nyc</h2>
-                <div class="grid-container aerial-view">
-                  <div class="col-6 col-sm-12">
-                    <img src="assets/images/aerial-view.jpg" alt="An aerial view of New York">
+            <section class="container intro-container">
+              <h2 class="text-uppercase">about thrifty nyc</h2>
+                <div class="first">
+                  <div class="row">
+                    <div class="col-sm-6">
+                       <p>
+                    Welcome to ThriftyNYC.com, your ultimate guide to unlocking the free 
+                    and discounted experiences in the heart of New York City! In a city known for its bustling
+                    energy and diverse cultural offerings, we understand the importance  of enjoying all that 
+                    it has to offer without breaking the bank. ThriftyNYC.com is here to be your go-to resource
+                    for budget-friendly adventures and exclusive deals that make your time in the Big Apple memorable
+                    without draining your wallet.
+                  </p>
+                  <p d-md-none>   
+                    Discover a plethora of events, activities, and attractions as well as insider tips on snagging discounts
+                    for popular attractions, dining, and entertainment. From outdoor festivals to art exhibitions, hidden parks
+                    to wallet-friendly dining options, we've got you covered. Join us in embracing the thrifty spirit of NYC and
+                    embark on a journey that proves you don't need to break the bank to experience the best of New York!
+                  </p>
+                    </div>
+                  </div>
+           </section>
+                  
+                <!-- </div>  
                   </div>
                   
                 </div>
 
-    </div>
+    </div> -->
     <div class="section">
 
     </div>
