--- a/index.html
+++ b/index.html
@@ -43,36 +43,36 @@
             </div>
           </section>
 
-<!-- 
+
                 <!-- </div>
               </div> -->
 
     </div> 
             <!-- Intro-->
-            <section class="container intro-container">
-              <h2 class="text-uppercase">about thrifty nyc</h2>
-                <div class="first">
-                  <div class="row">
-                    <div class="col-sm-6">
-                       <p>
-                    Welcome to Thrifty NYC, your ultimate guide to unlocking the free 
-                    and discounted experiences in the heart of New York City! In a city known for its bustling
-                    energy and diverse cultural offerings, we understand the importance  of enjoying all that 
-                    it has to offer without breaking the bank. Thrifty NYC is here to be your go-to resource
-                    for budget-friendly adventures and exclusive deals that make your time in the Big Apple memorable
-                    without draining your wallet.
-                  </p>
-                  <div class=" d-none d-md-block">
-                  <p>  
-                    Discover a plethora of events, activities, and attractions as well as insider tips on snagging discounts
-                    for popular attractions, dining, and entertainment. From outdoor festivals to art exhibitions, hidden parks
-                    to wallet-friendly dining options, we've got you covered. Join us in embracing the thrifty spirit of NYC and
-                    embark on a journey that proves you don't need to break the bank to experience the best of New York!
-                  </p>
-                </div>
-                    </div>
-                  </div>
-           </section>
+        
+            <div class="row">
+              <h2>about thrifty nyc</h2>
+              <div class="col-md-6 aeriel-view-new">
+
+              </div>
+              <div class="col-md-6" intro-text>
+                <p>
+                  Welcome to Thrifty NYC, your ultimate guide to unlocking the free 
+                  and discounted experiences in the heart of New York City! In a city known for its bustling
+                  energy and diverse cultural offerings, we understand the importance  of enjoying all that 
+                  it has to offer without breaking the bank. Thrifty NYC is here to be your go-to resource
+                  for budget-friendly adventures and exclusive deals that make your time in the Big Apple memorable
+                  without draining your wallet.
+                </p>
+                <div class=" d-none d-md-block">
+                <p>  
+                  Discover a plethora of events, activities, and attractions as well as insider tips on snagging discounts
+                  for popular attractions, dining, and entertainment. From outdoor festivals to art exhibitions, hidden parks
+                  to wallet-friendly dining options, we've got you covered. Join us in embracing the thrifty spirit of NYC and
+                  embark on a journey that proves you don't need to break the bank to experience the best of New York!
+                </p>
+              </div>
+            </div> 
                   
                 <!-- </div>  
                   </div>
