--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <div id="breakpoints"></div>
         <header>
            <!-- NAVBAR -->
            <nav class="navbar navbar-expand-lg navbar-dark">
@@ -49,7 +50,7 @@
 
     </div> 
             <!-- Intro-->
-            <div class="container-fluid intro-container">  
+            <div class="flex-container intro-container">  
             <div class="row">
               <h2>about thrifty nyc</h2>
               <div class="col-md-6 aerial-view-new">
