--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </div> 
             <!-- Intro-->
-            <div class="flex-container intro-container">  
+            <div class="container-fluid intro-container">  
             <div class="row">
               <h2>about thrifty nyc</h2>
               <div class="col-md-6 aerial-view-new">
