--- a/index.html
+++ b/index.html
@@ -83,29 +83,29 @@
             <div class="flex-container icon-container">
               <div class="row">
                 <h2>useful websites</h2>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
                   <a href="https://new.mta.info/maps" target="_blank">
                     <i class="fa-solid fa-train-subway fa-8x"></i></a>
                 <br>
-                    <span>Subway Map</span>
+                    <span class="icon-captions">Subway Map</span>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
                   <a href="https://www.nyc.com/visitor_guide/" target="_blank">
                     <i class="fa-solid fa-map-location-dot fa-8x"></i></a>
                 <br>
-                    <span>Visitor Guide</span>
+                    <span class="icon-captions">Visitor Guide</span>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
                   <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank"
                      <i class="fa-regular fa-calendar fa-8x"></i></a>
                 <br>
-                     <span>Events Calendar</span>
+                     <span class="icon-captions">Calendar</span>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
                   <a href="https://www.xe.com/currencyconverter/" target="_blank"
                      <i class="fa-solid fa-dollar-sign fa-8x"></i></a>
                  <br>
-                    <span>Currency Convertor</span>
+                    <span class="icon-captions">Currency Convertor</span>
                 </div>
               </div>
 
