--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
             <div class="flex-container icon-container">
               <div class="row">
                 <h2>useful websites</h2>
-                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://new.mta.info/maps" target="_blank">
                     <i class="fa-solid fa-train-subway fa-8x"></i></a>
                 <br>
                     <span class="icon-captions">Subway Map</span>
                 </div>
-                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://www.nyc.com/visitor_guide/" target="_blank">
                     <i class="fa-solid fa-map-location-dot fa-8x"></i></a>
                 <br>
                     <span class="icon-captions">Visitor Guide</span>
                 </div>
-                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank"
                      <i class="fa-regular fa-calendar fa-8x"></i></a>
                 <br>
                      <span class="icon-captions">Calendar</span>
                 </div>
-                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center">
+                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://www.xe.com/currencyconverter/" target="_blank"
                      <i class="fa-solid fa-dollar-sign fa-8x"></i></a>
                  <br>
@@ -110,7 +110,40 @@
               </div>
 
     </div>
-    <div class="section">
+             <div class="container-fluid tips-container">
+                <div class="row tips">
+                  <h2>new york tips</h2>
+                    <div class="col-md-6">
+                      <h3>free activities</h3>
+                       <i class="fa-solid fa-ferry"></i>  
+                       <p>
+                          The Staten Island Ferry 23 minute ride gives you amazing close up views of the Statue of Liberty.  
+                          It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during the rush hours of 6-9:30am
+                          and 3:30-8pm.  
+                        </p>
+                        <i class="fa-solid fa-person-walking"></i>
+                        <p>
+                          Enjoy a selection of different walking tours with Free Tours By Foot lasting from 2-6 hours.
+                          These cover various areas of New York (but not Manhattan).  Tours are free but you can leave a tip.  
+                        </p>
+                        <i class="fa-solid fa-tree"></i>
+                        <p>
+                          Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
+                          enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
+                        </p>
+                        <i class="fa-solid fa-film"></i>
+                        <p>
+                          Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
+                        </p>
+                        <i class="fa-solid fa-beer-mug-empty"></i>
+                        <p>
+                          Brookyln Brewery offers free tours every Sunday hourly from 1-6pm.  No tasting is included
+                          but you can buy a drink in the bar.  
+                        </p>
+                    </div>
+
+
+                </div>
 
     </div>
     <div class="section">
