--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
     </div>
              <div class="container-fluid tips-container">
-                <div class="row tips">
+                <div class="row">
                   <h2>new york tips</h2>
-                    <div class="col-md-6">
+                    <div class="col-md-6 free-tips">
                       <h3>free activities</h3>
                        <i class="fa-solid fa-ferry"></i>  
                        <p>
@@ -139,6 +139,30 @@
                         <p>
                           Brookyln Brewery offers free tours every Sunday hourly from 1-6pm.  No tasting is included
                           but you can buy a drink in the bar.  
+                        </p>
+                    </div>
+                    <div class="col-md-6 free-tips">
+                      <h3>discounted activities</h3>
+                      <i class="fa-solid fa-shop"></i>     
+                       <p>
+                        Macy’s (the largest store in the USA) offers a Visitor’s Savings pass with 10% discount on many products.
+                        Collect in store (you need ID too).  
+                        </p>
+                        <i class="fa-solid fa-masks-theater"></i>
+                        <p>
+                          Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show.   
+                        </p>
+                        <i class="fa-solid fa-building-columns"></i>
+                        <p>
+                          Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
+                        </p>
+                        <i class="fa-solid fa-pizza-slice"></i>
+                        <p>
+                          For $20 the Eat and Play card offers discounts on food, attractions, shopping and shows.  
+                        </p>
+                        <i class="fa-solid fa-martini-glass-citrus"></i>
+                        <p>
+                          Many New York bars off happy hours with big savings.  
                         </p>
                     </div>
 
