--- a/index.html
+++ b/index.html
@@ -115,27 +115,27 @@
                   <h2>new york tips</h2>
                     <div class="col-md-6 free-tips-icons">
                       <h3>free activities</h3>
-                       <i class="fa-solid fa-ferry fa-2x"></i>  
+                       <h6>Staten Island Ferry<i class="fa-solid fa-ferry"></i></h6>  
                        <p>
                           The Staten Island Ferry 23 minute ride gives you amazing close up views of the Statue of Liberty.  
                           It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during the rush hours of 6-9:30am
                           and 3:30-8pm.  
                         </p>
-                        <i class="fa-solid fa-person-walking fa-2x"></i>
+                        <h6>Walking Tours<i class="fa-solid fa-person-walking"></i></h6>
                         <p>
                           Enjoy a selection of different walking tours with Free Tours By Foot lasting from 2-6 hours.
                           These cover various areas of New York (but not Manhattan).  Tours are free but you can leave a tip.  
                         </p>
-                        <i class="fa-solid fa-tree fa-2x"></i>
+                        <h6>Park<i class="fa-solid fa-tree"></i></h6>
                         <p>
                           Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
                           enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
                         </p>
-                        <i class="fa-solid fa-film fa-2x"></i>
+                        <h6>Films<i class="fa-solid fa-film"></i></h6>
                         <p>
                           Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
                         </p>
-                        <i class="fa-solid fa-beer-mug-empty fa-2x"></i>
+                        <h6>Beer Tour<i class="fa-solid fa-beer-mug-empty"></i></h6>
                         <p>
                           Brookyln Brewery offers free tours every Sunday hourly from 1-6pm.  No tasting is included
                           but you can buy a drink in the bar.  
@@ -143,37 +143,32 @@
                     </div>
                     <div class="col-md-6 discounted-tips-icons">
                       <h3>discounted activities</h3>
-                      <i class="fa-solid fa-shop"><i>
-                        <span class="tips-icons">Shopping</span>
-                        <br>
-                        <p>
-                        Macy’s (the largest store in the USA) offers a Visitor’s Savings pass with 10% discount on many products.
-                        Collect in store (you need ID too).  
+                        <h6>Staten Island Ferry  <i class="fa-solid fa-ferry"></i></h6>  
+                       <p>
+                          The Staten Island Ferry 23 minute ride gives you amazing close up views of the Statue of Liberty.  
+                          It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during the rush hours of 6-9:30am
+                          and 3:30-8pm.  
                         </p>
-                      <br>
-                        <i class="fa-solid fa-masks-theater"></i>
-                        <span class="tips-icons">Theatre</span>
+                        <i class="fa-solid fa-person-walking"><h6>Walking Tours</i></h6>
                         <p>
-                          Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show.   
+                          Enjoy a selection of different walking tours with Free Tours By Foot lasting from 2-6 hours.
+                          These cover various areas of New York (but not Manhattan).  Tours are free but you can leave a tip.  
                         </p>
-                        <br>
-                        <i class="fa-solid fa-building-columns"></i>
-                        <span class="tips-icons">Musuems</span>
+                        <i class="fa-solid fa-tree">   Park</i>
                         <p>
-                          Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
+                          Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
+                          enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
                         </p>
-                        <br>
-                        <i class="fa-solid fa-pizza-slice"></i>
-                        <span class="tips-icons">Food</span>
+                        <i class="fa-solid fa-film">   Outdoor Films</i>
                         <p>
-                          For $20 the Eat and Play card offers discounts on food, attractions, shopping and shows.  
+                          Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
                         </p>
-                        <i class="fa-solid fa-martini-glass-citrus"></i>
-                        <span class="tips-icons">Cheap Drinks</span>
+                        <i class="fa-solid fa-beer-mug-empty">   Beer Tour</i>
                         <p>
-                          Many New York bars off happy hours with big savings.  
+                          Brookyln Brewery offers free tours every Sunday hourly from 1-6pm.  No tasting is included
+                          but you can buy a drink in the bar.  
                         </p>
-                        <br>
+                    </div>
                     </div>
 
 
