Borders added to tips and more spacing added

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                        <h6>Staten Island Ferry&nbsp;<i class="fa-solid fa-ferry"></i></h6> 
                        <p>
                           The Staten Island Ferry 23 minute ride gives you amazing close up views of the Statue of Liberty.  
-                          It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during the rush hours of 6-9:30am
-                          and 3:30-8pm.  
+                          It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during rush hours)
                         </p>
                         <h6>Walking Tours&nbsp;<i class="fa-solid fa-person-walking"></i></h6>
                         <p>
