Background and font colours changed

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                           Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show.  
                           Also Off Broadways shows are discounted. 
                         </p>
-                        <h6>Musuemns&nbsp;<i class="fa-solid fa-building-columns"></i></h6>
+                        <h6>Museumns&nbsp;<i class="fa-solid fa-building-columns"></i></h6>
                         <p>
                           Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
                           Look at museum websites for more details.    
