Tips background colours changed to pass WCAG

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                       <h3>free activities</h3>
                        <h6>Staten Island Ferry&nbsp;<i class="fa-solid fa-ferry"></i></h6> 
                        <p>
-                          The Staten Island Ferry 23 minute ride gives you amazing close up views of the Statue of Liberty.  
+                          The Staten Island Ferry gives you amazing close up views of the Statue of Liberty.  
                           It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during rush hours)
                         </p>
                         <h6>Walking Tours&nbsp;<i class="fa-solid fa-person-walking"></i></h6>
                         <p>
-                          Enjoy a selection of different walking tours with Free Tours By Foot lasting from 2-6 hours.
-                          These cover various areas of New York (but not Manhattan).  Tours are free but you can leave a tip.  
+                          Enjoy a selection of different walking tours lasting from 2-6 hours covering various areas
+                          of New York (but not Manhattan).  Free tours but you can leave a tip.  
                         </p>
                         <h6>Park&nbsp;<i class="fa-solid fa-tree"></i></h6>
                         <p>
@@ -149,10 +149,10 @@
                         </p>
                         <h6>Theatre&nbsp;<i class="fa-solid fa-masks-theater"></i></h6>
                         <p>
-                          Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show.  
-                          Also Off Broadways shows are discounted. 
+                          Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show. (You'll
+                          need to queue). Also Off Broadways shows are discounted. 
                         </p>
-                        <h6>Museumns&nbsp;<i class="fa-solid fa-building-columns"></i></h6>
+                        <h6>Museums&nbsp;<i class="fa-solid fa-building-columns"></i></h6>
                         <p>
                           Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
                           Look at museum websites for more details.    
