--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i>Home</a>
+                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house";></i>&nbsp;Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-comment"></i>Tips</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-comment"></i>&nbsp;Tips</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-camera"></i>Gallery</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-camera"></i>&nbsp;Gallery</a>
                   </li>
                 </ul>
               </div>
@@ -51,10 +51,10 @@
     </div> 
             <!-- Intro-->
             <div class="container-fluid intro-container">  
-            <div class="row">
-              <h2>about thrifty nyc</h2>
+              <div class="row">
+                <h2>about thrifty nyc</h2>
               <div class="col-md-6 aerial-view-new">
-              </div>
+                </div>
               <div class="col-md-6" intro-text>
                 <p>
                   Welcome to Thrifty NYC, your ultimate guide to unlocking the free 
@@ -64,7 +64,7 @@
                   for budget-friendly adventures and exclusive deals that make your time in the Big Apple memorable
                   without draining your wallet.
                 </p>
-                <div class=" d-none d-md-block">
+              <div class=" d-none d-md-block">
                 <p>  
                   Discover a plethora of events, activities, and attractions as well as insider tips on snagging discounts
                   for popular attractions, dining, and entertainment. From outdoor festivals to art exhibitions, hidden parks
@@ -72,14 +72,9 @@
                   embark on a journey that proves you don't need to break the bank to experience the best of New York!
                 </p>
               </div>
-            </div> 
+              </div> 
             </div>
-                <!-- </div>  
-                  </div>
-                  
-                </div>
-
-    </div> -->
+               
             <div class="flex-container icon-container">
               <div class="row">
                 <h2>useful websites</h2>
