--- a/index.html
+++ b/index.html
@@ -164,7 +164,33 @@
                 </div>
 
     </div>
-    <div class="section">
+              <section class="container-fluid form-container">
+                <div class="row">
+                  <div class="col">
+                    <h4>Do you have a free <br> or discounted tip?</h4>
+                    <h5>Fill in the form below to share your amazing tips</h5>
+
+                    <div class="centre-form">
+                      <form>
+                        <div class="form-group">
+                          <label for="exampleFormControlInput1">Name</label>
+                          <input type="text" class="form-control" id="name" placeholder="Your name"> 
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleFormControlInput2">Email address</label>
+                          <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Your tip</label>
+                          <textarea class="form-control" id="tip" rows="5"></textarea>
+                        </div>
+                      </form>
+
+                      
+
+                    </div>
+                  </div>
+                </div>
 
     </div>
     <div class="section">
