--- a/index.html
+++ b/index.html
@@ -174,16 +174,28 @@
                       <form>
                         <div class="form-group">
                           <label for="exampleFormControlInput1">Name</label>
-                          <input type="text" class="form-control" id="name" placeholder="Your name"> 
+                          <input type="text" class="form-control" id="name" placeholder="Your name" required /> 
                         </div>
                         <div class="form-group">
                           <label for="exampleFormControlInput2">Email address</label>
-                          <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                          <input type="email" class="form-control" id="email" placeholder="name@example.com" required />
                         </div>
                         <div class="form-group">
                           <label for="exampleFormControlTextarea1">Your tip</label>
-                          <textarea class="form-control" id="tip" rows="5"></textarea>
+                          <textarea class="form-control" id="tip" rows="5"placeholder="Write your tip here" required /></textarea>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                          <label class="form-check-label" for="inlineCheckbox1">Free Tip</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                          <label class="form-check-label" for="inlineCheckbox2">Discounted Tip</label>
+                        </div>
+                        <div class="form-row text-center">
+                            <button type="button" class="btn btn-success">Submit tip</button>
+                          </div>
+                        
                       </form>
 
                       
