Modal added to form

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                           <label class="form-check-label" for="inlineCheckbox2">Discounted Tip</label>
                         </div>
                         <div class="form-row text-center">
-                            <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#submitTip">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#submitTip">
                             Submit tip</button>
                           </div> 
                       </form>
