three more photos and cards added

--- a/index.html
+++ b/index.html
@@ -230,10 +230,39 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card">
+                <img src="assets/images/times-square.JPG" alt="Times Square" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">Times Square</h5>
+                  <p class="card-text">Always busy but best seen at night. Filled with popular retailers and a discount ticket booth.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row g-3">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card">
+                <img src="assets/images/grand-central.JPG" alt="Inside Grand Central Train Station" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">Grand Central</h5>
+                  <p class="card-text">The largest train station in the world with 44 platforms and 67 tracks on two levels.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <img src="assets/images/staten-ferry.jpg" alt="The orange Staten Island Ferry" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Staten Island Ferry</h5>
                   <p class="card-text">This 25 minutes boat ride carries nearly 70,000 people daily from Manhattan to Staten Island.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card">
+                <img src="assets/images/outdoor-cinema.JPG" alt="An outdoor cinema in a Manhattan park" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">Outdoor Cinema</h5>
+                  <p class="card-text">From May to August enjoy an outdoor cinema experience at many of New York’s parks.</p>
                 </div>
               </div>
             </div>
