Border and padding added to form

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2>about thrifty nyc</h2>
               <div class="col-md-6 aerial-view-new">
                 </div>
-              <div class="col-md-6" intro-text>
+              <div class="col-md-6 intro-text">
                 <p>
                   Welcome to Thrifty NYC, your ultimate guide to unlocking the free 
                   and discounted experiences in the heart of New York City! In a city known for its bustling
