--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
                   <h2>new york tips</h2>
                     <div class="col-md-6 free-tips-icons">
                       <h3>free activities</h3>
-                       <h6>Staten Island Ferry&nbsp;<i class="fa-solid fa-ferry"></i></h6> 
+                       <h5>Staten Island Ferry&nbsp;<i class="fa-solid fa-ferry"></i></h5> 
                        <p>
                           The Staten Island Ferry gives you amazing close up views of the Statue of Liberty.  
                           It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during rush hours)
                         </p>
-                        <h6>Walking Tours&nbsp;<i class="fa-solid fa-person-walking"></i></h6>
+                        <h5>Walking Tours&nbsp;<i class="fa-solid fa-person-walking"></i></h5>
                         <p>
                           Enjoy a selection of different walking tours lasting from 2-6 hours covering various areas
                           of New York (but not Manhattan).  Free tours but you can leave a tip.  
                         </p>
-                        <h6>Park&nbsp;<i class="fa-solid fa-tree"></i></h6>
+                        <h5>Park&nbsp;<i class="fa-solid fa-tree"></i></h5>
                         <p>
                           Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
                           enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
                         </p>
-                        <h6>Films&nbsp;<i class="fa-solid fa-film"></i></h6>
+                        <h5>Films&nbsp;<i class="fa-solid fa-film"></i></h5>
                         <p>
                           Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
                         </p>
-                        <h6>Beer Tour&nbsp;<i class="fa-solid fa-beer-mug-empty"></i></h6>
+                        <h5>Beer Tour&nbsp;<i class="fa-solid fa-beer-mug-empty"></i></h5>
                         <p>
                           Brookyln Brewery offers free tours every Sunday hourly from 1-6pm.  No tasting is included
                           but you can buy a drink in the bar.  
@@ -135,26 +135,26 @@
                     </div>
                     <div class="col-md-6 discounted-tips-icons">
                       <h3>discounted activities</h3>
-                        <h6>Shopping&nbsp;<i class="fa-solid fa-shop"></i></h6>  
+                        <h5>Shopping&nbsp;<i class="fa-solid fa-shop"></i></h5>  
                        <p>
                         Macy’s (the largest store in the USA) offers a Visitor’s Savings pass with 10% discount on many
                         products.  Collect in store on the mezzanine level (you need ID too).  
                         </p>
-                        <h6>Theatre&nbsp;<i class="fa-solid fa-masks-theater"></i></h6>
+                        <h5>Theatre&nbsp;<i class="fa-solid fa-masks-theater"></i></h5>
                         <p>
                           Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show. (You'll
                           need to queue). Also Off Broadways shows are discounted. 
                         </p>
-                        <h6>Museums&nbsp;<i class="fa-solid fa-building-columns"></i></h6>
+                        <h5>Museums&nbsp;<i class="fa-solid fa-building-columns"></i></h5>
                         <p>
                           Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
                           Look at museum websites for more details.    
                         </p>
-                        <h6>Food&nbsp;<i class="fa-solid fa-pizza-slice"></i></h6>
+                        <h5>Food&nbsp;<i class="fa-solid fa-pizza-slice"></i></h5>
                         <p>
                           For $20 the Eat and Play card offers discounts on food, attractions, shopping and shows. 
                         </p>
-                        <h6>Drinks&nbsp;<i class="fa-solid fa-martini-glass-citrus"></i></h6>
+                        <h5>Drinks&nbsp;<i class="fa-solid fa-martini-glass-citrus"></i></h5>
                         <p>
                           Many New York bars off happy hours with big savings.
                         </p>
@@ -214,7 +214,7 @@
             <div class="card">
               <img src="assets/images/central-park.jpg" class="card-img-top" alt="The fountain and boating lake in Central Park">
               <div class="card-body">
-                <h5 class="card-title">Central Park</h5>
+                <h4 class="card-title">Central Park</h4>
                 <p class="card-text">The infamous 843 acre park in the middle of Manhattan welcomes over 42 million visitors annually.</p>
               </div>
             </div>
@@ -223,7 +223,7 @@
             <div class="card">
               <img src="assets/images/grand-central.JPG" class="card-img-top" alt="Inside Grand Central Train Station">
               <div class="card-body">
-                <h5 class="card-title">Grand Central</h5>
+                <h4 class="card-title">Grand Central</h4>
                 <p class="card-text">The largest train station in the world with 44 platforms and 67 tracks on two levels.</p>
               </div>
             </div>
@@ -232,7 +232,7 @@
             <div class="card">
               <img src="assets/images/times-square.JPG" class="card-img-top" alt="Times Square at Night">
               <div class="card-body">
-                <h5 class="card-title">Times Square</h5>
+                <h4 class="card-title">Times Square</h4>
                 <p class="card-text">Always busy and best seen at night. Filled with popular retailers and a discount ticket booth.</p>
               </div>
             </div>
@@ -241,7 +241,7 @@
             <div class="card">
               <img src="assets/images/brooklyn-bridge.jpg" class="card-img-top" alt="Brooklyn Bridge">
               <div class="card-body">
-                <h5 class="card-title">Brooklyn Bridge</h5>
+                <h4 class="card-title">Brooklyn Bridge</h4>
                 <p class="card-text">The bridge spans the East River between Manhattan and Brooklyn and was opened in 1883.</p>
               </div>
             </div>
@@ -250,7 +250,7 @@
             <div class="card">
               <img src="assets/images/staten-ferry.jpg" class="card-img-top" alt="The orange Staten Island Ferry">
               <div class="card-body">
-                <h5 class="card-title">Staten Island Ferry</h5>
+                <h4 class="card-title">Staten Island Ferry</h4>
                 <p class="card-text">This 25 minutes boat ride carries nearly 70,000 people daily from Manhattan to Staten Island.</p>
               </div>
             </div>
@@ -259,7 +259,7 @@
             <div class="card">
               <img src="assets/images/outdoor-cinema.JPG" class="card-img-top" alt="An outdoor cinema in a Manhattan Park">
               <div class="card-body">
-                <h5 class="card-title">Outdoor Cinema</h5>
+                <h4 class="card-title">Outdoor Cinema</h4>
                 <p class="card-text">From May to August enjoy an outdoor cinema experience at many of New York’s parks.</p>
               </div>
             </div>
@@ -267,8 +267,39 @@
           </div>
          </div>
                 
-    <footer>
-
+        <footer class="container-fluid footer-container">
+            <div class="row">
+            <div class="col">
+              <h6>Contact Us</h6>
+              <p>Email:thriftynyc@example.com</p> <a href="hotmail.com"  target="_blank"></a>
+              <p>Write:THRIFTY NYC, Unit 1 <br> Treforest Industial Estate, <br> Pontypridd <br> CF37 5SP </p>
+            </div>
+            <div class="col">
+              <h6>Follow Us</h6>
+              <ul class="list-inline social-links">
+                <li>
+                  <a href="https://twitter.com" target="_blank">
+                    <i class="fa-brands fa-x-twitter fa-2x" style="color:white" aria-hidden="true"></i>
+                      <span class="sr-only">Twitter</span>
+                </a>
+                </li>
+                <li>
+                  <a href="https://instagram.com" target="_blank">
+                    <i class="fa-brands fa-instagram fa-2x" style="color:white" aria-hidden="true"></i>
+                      <span class="sr-only">Instagram</span>
+                </a>
+                </li>
+                <li>
+                  <a href="https://tiktok.com" target="_blank">
+                    <i class="fa-brands fa-tiktok fa-2x" style="color:white" aria-hidden="true"></i>
+                      <span class="sr-only">Instagram</span>
+                </a>
+                </li>
+              </ul>
+        </div>
+            </div>
+          </div>
+        
     </footer>
 
 
