Padding added for social media icons for different screen sizes

--- a/index.html
+++ b/index.html
@@ -269,29 +269,34 @@
                 
         <footer class="container-fluid footer-container">
             <div class="row">
-            <div class="col">
-              <h6>Contact Us</h6>
-              <p>Email:thriftynyc@example.com</p> <a href="hotmail.com"  target="_blank"></a>
-              <p>Write:THRIFTY NYC, Unit 1 <br> Treforest Industial Estate, <br> Pontypridd <br> CF37 5SP </p>
+            <div class="col thrifty-email">
+              <h6>Contact</h6>
+              <p>Email:thriftynyc@example.com</p> <a href="https://hotmail.com"  target="_blank"></a>
             </div>
             <div class="col">
-              <h6>Follow Us</h6>
+              <h6>Follow</h6>
               <ul class="list-inline social-links">
                 <li>
+                  <a href="https://facebook.com" target="_blank">
+                    <i class="fa-brands fa-facebook" style="color:white" aria-hidden="true"></i>
+                      <span class="sr-only">Facebook</span>
+                </a>
+                </li>
+                <li>
                   <a href="https://twitter.com" target="_blank">
-                    <i class="fa-brands fa-x-twitter fa-2x" style="color:white" aria-hidden="true"></i>
+                    <i class="fa-brands fa-x-twitter" style="color:white" aria-hidden="true"></i>
                       <span class="sr-only">Twitter</span>
                 </a>
                 </li>
                 <li>
                   <a href="https://instagram.com" target="_blank">
-                    <i class="fa-brands fa-instagram fa-2x" style="color:white" aria-hidden="true"></i>
+                    <i class="fa-brands fa-instagram" style="color:white" aria-hidden="true"></i>
                       <span class="sr-only">Instagram</span>
                 </a>
                 </li>
                 <li>
                   <a href="https://tiktok.com" target="_blank">
-                    <i class="fa-brands fa-tiktok fa-2x" style="color:white" aria-hidden="true"></i>
+                    <i class="fa-brands fa-tiktok" style="color:white" aria-hidden="true"></i>
                       <span class="sr-only">Instagram</span>
                 </a>
                 </li>
