Programs Used added to README

--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
                           Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show. (You'll
                           need to queue). Also Off Broadways shows are discounted. 
                         </p>
-                        <h5>Museums&nbsp;<i class="fa-solid fa-building-columns"></i></h5>
+                        <h5>Museums
+                          <a href="https://www.timeout.com/newyork/museums/free-museum-days-in-nyc" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
-                          Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
-                          Look at individual museum websites for more details.    
+                          Many museums offer free or pay what you wish entry weekly although they are busier at these times.
+                          (Often musuems are closed on a Monday) 
                         </p>
                         <h5>Food
                           <a href="https://eatandplaycard.com/destination-new-york-city/" target="_blank">
