Removed fluid from intro container and changed background colour

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     </div> 
             <!-- Intro-->
-            <div class="container-fluid intro-container">  
+            <div class="container intro-container">  
               <div class="row">
                 <h2>about thrifty nyc</h2>
               <div class="col-md-6 aerial-view-new">
