Added better spacing for mobile devices

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="container intro-container">  
               <div class="row">
                 <h2>about thrifty nyc</h2>
-              <div class="col-md-6 aerial-view-new">
+              <div class="col-10 offset-1 col-md-6 aerial-view-new">
                 </div>
-              <div class="col-md-6 intro-text">
+              <div class="col-10 offset-1 col-md-6 intro-text">
                 <p>
                   Welcome to Thrifty NYC, your ultimate guide to unlocking the free 
                   and discounted experiences in the heart of New York City! In a city known for its bustling
@@ -107,7 +107,7 @@
              <div class="container-fluid tips-container"></div>
                 <div class="row">
                   <h2>new york tips</h2>
-                    <div class="col-md-6 free-tips-icons">
+                    <div class="col-10 offset-1 col-md-6 free-tips-icons">
                       <h3>free activities</h3>
                        <h5>Staten Island Ferry
                         <a href="https://siferry.com/" target="_blank">
@@ -144,7 +144,7 @@
                           but you can buy a drink in the bar.  
                         </p>
                     </div>
-                    <div class="col-md-6 discounted-tips-icons">
+                    <div class="col-10 offset-1 col-md-6 discounted-tips-icons">
                       <h3>discounted activities</h3>
                         <h5>Shopping
                           <a href="https://www.macys.com/" target="_blank">
