Tips container changed to flex and styled

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <!-- </div>  -->
 
       <!-- Intro-->
-        <div class="container intro-container">  
+        <div class="container-fluid intro-container">  
           <div class="row">
             <h2>about thrifty nyc</h2>
-              <div class="col-10 offset-1 col-md-6 offset-md-0 aerial-view-new">
+              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new">
               </div>
                 <div class="col-10 offset-1 col-md-6 offset-md-0 intro-text">
                   <p>
@@ -106,7 +106,7 @@
 
         <!-- Tips-->
         <section id="tips">
-          <div class="container-fluid tips-container"></div>
+          <div class="container tips-container"></div>
             <div class="row id="tips-buttons">
               <h2>new york tips</h2>
                 <div class="col-10 offset-1 col-md-6 offset-md-0 free-tips-icons">
